Atualizações de informações

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                         <span class="text-primary">Fróes</span>
                     </h1>
                     <div class="subheading mb-5">
-                        <a href="https://www.google.com/maps/search/?api=Rua Ibicoara 11 Livramento de Nossa Senhora Ba"> Rua Ibicoara 11 · Livramento de Nossa Senhora, Ba</a> · (77) 99918-1240 ·
-                        <a href="mailto:fabio.froes15@gmail.com">fabio.froes15@gmail.com</a>
+                        <a href="https://www.google.com/maps/search/?api=Rua Ibicoara 11 Livramento de Nossa Senhora Ba" class="text-decoration-none"> Rua Ibicoara 11 · Livramento de Nossa Senhora, Ba</a> · (77) 99918-1240 ·
+                        <a href="mailto:fabio.froes15@gmail.com" class="text-decoration-none">fabio.froes15@gmail.com</a>
                     </div>
                     <p class="lead mb-5">Acredito que a busca por conhecimento e melhoria contínua deve fazer parte do nosso dia-a-dia. Para nos transformar em proofissionais e principalmente pessoas melhores. Tenho imenso prazer em trabalhar em equipe, acredito que cada pessoa contribui com suas proprias experiências, e o trabalho fica em melhor harmonia trabalhando em conjunto. Tenho convicção que a tecnologia quando bem aplicada pode e irá transformar o mundo para melhor.</p>
                     <div class="social-icons">
@@ -134,14 +134,14 @@
                 <div class="resume-section-content">
                     <h2 data-aos="fade-right" class="mb-5">Skills</h2>
                     <div data-aos="fade-left" class="subheading mb-3">Programação Linguagens & Ferramentas</div>
-                        <ul .ulSkil data-aos="fade-left" class="list-inline dev-icons">
+                        <ul data-aos="fade-left" class="list-inline dev-icons ulSkil">
                             <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                             <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
                             <li class="list-inline-item"><i class="fab fa-js"></i></li>
                             <li class="list-inline-item"><i class="devicon-dart-plain"></i></li>
                             <li class="List-inline-item"><i class="fas fa-copyright"></i></li>
-                            <li class="List-inline-item"><i class="devicon-flutter-plain colori"></i>
-                            <li class="List-inline-item"><i class="fa-brands fa-js"></i>
+                            <li class="List-inline-item"><i class="devicon-flutter-plain colori"></i></li>
+                            <li class="List-inline-item"><i class="fab fa-vuejs"></i></li>
           
                         </ul>
                     <div data-aos="fade-left" class="subheading mb-3">Trabalho</div>
@@ -178,7 +178,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 data-aos="fade-right" class="mb-5">Resumo</h2>
-                    <p data-aos="fade-left">Profissional com 3 anos de experiência progressiva em TI. Oferecendo conhecimentos em, Formatação e manutenção em computadores e celulares, Manutenção em impressoras, Suporte de redes, atendimento ao cliente...
+                    <p data-aos="fade-left">Profissional com mais de 4 anos de experiência progressiva em TI. Oferecendo conhecimentos em, Formatação e manutenção em computadores e celulares, Manutenção em impressoras, Suporte de redes, atendimento ao cliente...
                         Sou Técnico em Informática pelo Centro Estadual de Educação Profissional(Fev/2013), atualmente estou cursando Sistemas de Informação pela UniFTC (fev/2018). Possuo conhecimento intermediário no Pacote Office (Excel, PowerPoint e Word), mutimídia e digitação. tenho conhecimento em desenvolvimento Web, e estou fazendo um curso (CURSO DESENVOLVIMENTO WEB FULL STACK) do Programador Br. Estou cursando também o curso de Flutter e Dart Para a Construção de Apps Nativas Para iOS e Android.</p>
                 </div>
             </section>        
