Atualização de informações

--- a/index.html
+++ b/index.html
@@ -148,28 +148,49 @@
                         <ul data-aos="fade-left" class="fa-ul mb-0">
                             <li>
                                 <span class="fa-li"><i class="fas fa-check"></i></span>
-                                Construcoes de Aplicações web
+                                Construcões e manutenção de Aplicações web.
                             </li>
                             <li>
                                 <span class="fa-li"><i class="fas fa-check"></i></span>
-                                Construção de Aplicações Responsivas
+                                Construção de Aplicações Responsivas.
                             </li>
                             <li>
                                 <span class="fa-li"><i class="fas fa-check"></i></span>
-                                Framework - Bootstrap
+                                Frameworks - Bootstrap, Vue.js, Quasar, NestJs, Prisma ORM.
                             </li>
                             <li>
                                 <span class="fa-li"><i class="fas fa-check"></i></span>
-                                Linguagem C
+                                Banco de Dados - Postgres.
                             </li>
                             <li>
                                 <span class="fa-li"><i class="fas fa-check"></i></span>
-                                Linguagem Dart
+                                Linguagem - JavaScript, TypeScript.
                             </li>
                             <li>
                                 <span class="fa-li"><i class="fas fa-check"></i></span>
-                                Construir Apps para Android e iOS com Flutter
+                                Conhecimento em (Git e GitHub).
                             </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
+                                Trabalho em equipe.
+                            </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
+                                Inteligência emocional.
+                            </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
+                                Proatividade.
+                            </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
+                                Flexibilidade e capacidade de se adaptar a mudanças.
+                            </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
+                                Conhecimento técnico e aprendizado contínuo.
+                            </li>
+
                         </ul>
                 </div>
             </section>
@@ -178,8 +199,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 data-aos="fade-right" class="mb-5">Resumo</h2>
-                    <p data-aos="fade-left">Profissional com mais de 4 anos de experiência progressiva em TI. Oferecendo conhecimentos em, Formatação e manutenção em computadores e celulares, Manutenção em impressoras, Suporte de redes, atendimento ao cliente...
-                        Sou Técnico em Informática pelo Centro Estadual de Educação Profissional(Fev/2013), atualmente estou cursando Sistemas de Informação pela UniFTC (fev/2018). Possuo conhecimento intermediário no Pacote Office (Excel, PowerPoint e Word), mutimídia e digitação. tenho conhecimento em desenvolvimento Web, e estou fazendo um curso (CURSO DESENVOLVIMENTO WEB FULL STACK) do Programador Br. Estou cursando também o curso de Flutter e Dart Para a Construção de Apps Nativas Para iOS e Android.</p>
+                    <p data-aos="fade-left">Profissional com mais de 8 anos de experiência progressiva em TI. Oferecendo conhecimentos em, Formatação e manutenção em computadores e celulares, Manutenção em impressoras, Suporte de redes, atendimento ao cliente... Sou Técnico em Informática pelo Centro Estadual de Educação Profissional(Fev/2013), atualmente estou cursando Sistemas de Informação pela UniFTC (fev/2018). Possuo conhecimento em desenvolvimento Web, e estou acabando um curso (CURSO DESENVOLVIMENTO WEB FULL STACK) do Programador Br, e outros curso de Node, Nest, Prisma, Postgres, Vue.js e quasar.</p>
                 </div>
             </section>        
             </div>
@@ -195,7 +215,16 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Operador de Microcomputador
+                            (Desenvolvimento full stach) ProgramadorBR
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            NestJS do Zero com TypeORM, Prisma e Swagger
+
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            Vue JS  
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
