atualizacão de foto resumo e tecnologias

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         </div>
 
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark-blue fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Fábio Fróes</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2 " src="assets/img/perfil.jpeg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -55,7 +55,7 @@
                         <span class="text-primary">Fróes</span>
                     </h1>
                     <div class="subheading mb-5">
-                        <a href="https://www.google.com/maps/search/?api=Rua Ibicoara 11 Livramento de Nossa Senhora Ba" class="text-decoration-none"> Rua Ibicoara 11 · Livramento de Nossa Senhora, Ba</a> · (77) 99918-1240 ·
+                        <a href="https://www.google.com/maps/search/?api=Rua Ibicoara 11 Livramento de Nossa Senhora Ba" class="text-decoration-none"> Rua Ibicoara 11 · Livramento de Nossa Senhora, Ba</a> · <span class="numero">(77) 99918-1240</span> ·
                         <a href="mailto:fabio.froes15@gmail.com" class="text-decoration-none">fabio.froes15@gmail.com</a>
                     </div>
                     <p class="lead mb-5">Acredito que a busca por conhecimento e melhoria contínua deve fazer parte do nosso dia-a-dia. Para nos transformar em proofissionais e principalmente pessoas melhores. Tenho imenso prazer em trabalhar em equipe, acredito que cada pessoa contribui com suas proprias experiências, e o trabalho fica em melhor harmonia trabalhando em conjunto. Tenho convicção que a tecnologia quando bem aplicada pode e irá transformar o mundo para melhor.</p>
@@ -94,7 +94,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Estagiário</h3>
                             <div class="subheading mb-3">Prefeitura Municipal de Vitória da Conquista</div>
-                            <p>Centro de Tecnologia da Informação</p>
+                            <p>Atuo no Desenvolvimento e manutenção de aplicações web utilizando as tecnologias: JavaScript, Vue.js, TypeScript, Node.js, Nest.js, PostgreSQL e Prisma ORM</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Maio 2022 - Atualmente</span></div>
                     </div>
@@ -135,14 +135,24 @@
                     <h2 data-aos="fade-right" class="mb-5">Skills</h2>
                     <div data-aos="fade-left" class="subheading mb-3">Programação Linguagens & Ferramentas</div>
                         <ul data-aos="fade-left" class="list-inline dev-icons ulSkil">
+                            <!-- Ícone do HTML -->
                             <li class="list-inline-item"><i class="fab fa-html5"></i></li>
+                            <!-- Ícone do CSS -->
                             <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
+                            <!-- Ícone do js -->
                             <li class="list-inline-item"><i class="fab fa-js"></i></li>
-                            <li class="list-inline-item"><i class="devicon-dart-plain"></i></li>
-                            <li class="List-inline-item"><i class="fas fa-copyright"></i></li>
-                            <li class="List-inline-item"><i class="devicon-flutter-plain colori"></i></li>
-                            <li class="List-inline-item"><i class="fab fa-vuejs"></i></li>
-          
+                            <!-- Ícone do Vue.js -->                         
+                            <li class="list-inline-item"><i class="fab fa-vuejs"></i></li>
+                            <!-- Ícone do Node.js -->
+                            <li class="list-inline-item"><i class="fab fa-node-js"></i></li> 
+                            <!-- Ícone do Nest.js -->
+                            <li class="list-inline-item"><i class="devicon-nestjs-plain"></i></li> 
+                            <!-- Ícone do PostgreSQL -->
+                            <li class="list-inline-item"><i class="devicon-postgresql-plain"></i></li>
+                            <!-- Ícone do Prisma -->
+                            <li class="list-inline-item"><i class="devicon-prisma-plain"></i></li>
+                            <!-- Ícone do TypeScript -->
+                            <li class="list-inline-item"><i class="devicon-typescript-plain"></i></li>
                         </ul>
                     <div data-aos="fade-left" class="subheading mb-3">Trabalho</div>
                         <ul data-aos="fade-left" class="fa-ul mb-0">
@@ -169,6 +179,10 @@
                             <li>
                                 <span class="fa-li"><i class="fas fa-check"></i></span>
                                 Conhecimento em (Git e GitHub).
+                            </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
+                                Modelagem de de Banco de Dados - Draw io
                             </li>
                             <li>
                                 <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -199,7 +213,11 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 data-aos="fade-right" class="mb-5">Resumo</h2>
-                    <p data-aos="fade-left">Profissional com mais de 8 anos de experiência progressiva em TI. Oferecendo conhecimentos em, Formatação e manutenção em computadores e celulares, Manutenção em impressoras, Suporte de redes, atendimento ao cliente... Sou Técnico em Informática pelo Centro Estadual de Educação Profissional(Fev/2013), atualmente estou cursando Sistemas de Informação pela UniFTC (fev/2018). Possuo conhecimento em desenvolvimento Web, e estou acabando um curso (CURSO DESENVOLVIMENTO WEB FULL STACK) do Programador Br, e outros curso de Node, Nest, Prisma, Postgres, Vue.js e quasar.</p>
+                    <p data-aos="fade-left">Sou um profissional apaixonado pela área de tecnologia e desenvolvimento web, com uma carreira que se estende por vários anos. Minha jornada começou como um entusiasta da programação e, ao longo do tempo, adquiri experiência valiosa em diversas tecnologias-chave.
+                       <p> Durante toda a minha carreira, tenho tido o privilégio de trabalhar em projetos desafiadores e estimulantes, nos quais pude aprimorar e expandir meu conjunto de habilidades.
+                        Minha paixão reside no universo da programação e da tecnologia. Isso me levou a mergulhar profundamente em várias tecnologias essenciais, incluindo JavaScript, Vue.js, TypeScript, Node.js, Nest.js, PostgreSQL e Prisma ORM. Tenho orgulho em aplicar esse conhecimento para desenvolver aplicativos web de alto desempenho e escaláveis, que proporcionam experiências incríveis aos usuários finais.</p>br>
+                        Uma das minhas maiores satisfações é enfrentar desafios complexos e transformá-los em soluções práticas. Acredito firmemente que a tecnologia é uma ferramenta poderosa para resolver problemas do mundo real, e estou constantemente buscando oportunidades que me permitam fazer exatamente isso.
+                        Estou sempre ansioso para novas oportunidades que me desafiem a aplicar meu conjunto de habilidades em soluções criativas. </p>
                 </div>
             </section>        
             </div>
