--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <!--fab-->
         <div class="whatsapp-link">
-            <a class="social-icon icon-fab" href="https://web.whatsapp.com/send?phone=5577999181240"><i class="fab fa-whatsapp"></i></a>
+            <a class="social-icon icon-fab" href="https://web.whatsapp.com/send?phone=5577999181240"><img class="logo-wpp" src="./assets/img/wpp.png"></a>
 
         </div>
 
@@ -49,11 +49,17 @@
         <div class="container-fluid p-0">
             <!-- About-->
             <section class="resume-section" id="about">
+                
                 <div class="resume-section-content">
-                    <h1 class="mb-0">
-                        Fábio
-                        <span class="text-primary">Fróes</span>
-                    </h1>
+                    <div class="cel-img-center">
+                        <div class="group-img">
+                            <span class="d-block d-lg-none"><img class="img-main rounded-circle mx-auto mb-2 " src="assets/img/perfil.jpeg" alt="..." /></span>
+                            <h1 class="mb-0">
+                            Fábio
+                            <span class="text-primary">Fróes</span>
+                        </h1>
+                        </div>
+                    </div>            
                     <div class="subheading mb-5">
                         <a href="https://www.google.com/maps/search/?api=Rua Ibicoara 11 Livramento de Nossa Senhora Ba" class="text-decoration-none"> Rua Ibicoara 11 · Livramento de Nossa Senhora, Ba</a> · <span class="numero">(77) 99918-1240</span> ·
                         <a href="mailto:fabio.froes15@gmail.com" class="text-decoration-none">fabio.froes15@gmail.com</a>
@@ -134,7 +140,7 @@
                 <div class="resume-section-content">
                     <h2 data-aos="fade-right" class="mb-5">Skills</h2>
                     <div data-aos="fade-left" class="subheading mb-3">Programação Linguagens & Ferramentas</div>
-                        <ul data-aos="fade-left" class="list-inline dev-icons ulSkil">
+                        <ul data-aos="fade-left" class="list-inline dev-icons ulSkil flex-wrap">
                             <!-- Ícone do HTML -->
                             <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                             <!-- Ícone do CSS -->
